[doc] Create a Doclet that is compatible with Java 11.
Signed-off-by: Stéphane Galland <galland@arakhne.org>